Mutliple changes. - picture loading - connected to location services

--- a/app/src/main/res/layout/activity_stand.xml
+++ b/app/src/main/res/layout/activity_stand.xml
@@ -20,7 +20,13 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="exitUntilCollapsed">
+
+            <ImageView
+                android:id="@+id/stand_image"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:scaleType="centerCrop" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
