--- a/app/src/main/res/layout/content_stand.xml
+++ b/app/src/main/res/layout/content_stand.xml
@@ -4,16 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/activity_margin_left"
+    android:layout_marginRight="@dimen/activity_margin_right"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="sk.miroc.whitebikes.standdetail.StandActivity"
     tools:showIn="@layout/activity_stand">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/stand_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            android:text="@string/large_text" />
 
+        <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="124" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="24" />
+    </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
