--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#c4c4c4</color>
+    <color name="colorPrimaryDark">#9e9e9e</color>
+    <color name="colorAccent">#8bc34a</color>
+    <color name="white">#fff</color>
 </resources>
