--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <!--https://material.io/guidelines/layout/metrics-keylines.html#metrics-keylines-keylines-spacing-->
+    <dimen name="activity_margin_left">16dp</dimen>
+    <dimen name="activity_margin_right">16dp</dimen>
+
+
+
 </resources>
