--- a/app/src/main/res/layout/content_stand.xml
+++ b/app/src/main/res/layout/content_stand.xml
@@ -4,33 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="@dimen/activity_margin_left"
-    android:layout_marginRight="@dimen/activity_margin_right"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="sk.miroc.whitebikes.standdetail.StandActivity"
+    android:scrollbarAlwaysDrawVerticalTrack="true"
     tools:showIn="@layout/activity_stand">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
-        <TextView
-            android:id="@+id/stand_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:text="@string/large_text" />
-
-        <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="124" />
-
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="24" />
+            android:layout_marginLeft="@dimen/activity_margin_left"
+            android:layout_marginRight="@dimen/activity_margin_right"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/stand_name"
+                android:paddingTop="@dimen/primary_text_padding_top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
+            <TextView
+                android:id="@+id/stand_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/subtext_padding_top"
+                android:paddingBottom="@dimen/subtext_padding_bottom"
+                />
+        </LinearLayout>
+
+        <View android:id="@+id/tile_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/dividerVertical" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/line_height"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="@dimen/activity_margin_left"
+            android:layout_marginRight="@dimen/activity_margin_right"
+            android:text="@string/available_bikes"/>
+
+        <LinearLayout
+            android:id="@+id/bikes_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="@dimen/activity_margin_left"
+            android:layout_marginRight="@dimen/activity_margin_right">
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
