--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#c4c4c4</color>
-    <color name="colorPrimaryDark">#9e9e9e</color>
-    <color name="colorAccent">#8bc34a</color>
+
+    <!--<color name="colorPrimary">#c4c4c4</color>-->
+    <!--<color name="colorPrimaryDark">#9e9e9e</color>-->
+    <!--<color name="colorAccent">#8bc34a</color>-->
+
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#388E3C</color>
+    <color name="colorAccent">#8BC34A</color>
+
     <color name="white">#fff</color>
+    <color name="orange">#f0ad4e</color>
+
 </resources>
