--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,12 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <!-- custom items -->
+    <!--<style name="BrokenBikeButton" parent="Widget.AppCompat.Button.Colored">-->
+        <!--<item name="colorButtonNormal">#f0ad4e</item>-->
+        <!--<item name="android:textColorPrimary">#fff</item>-->
+    <!--</style>-->
 
 </resources>
