RentBikeActivity added. Primary color changed.

--- a/app/src/main/res/layout/activity_stand.xml
+++ b/app/src/main/res/layout/activity_stand.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/stand_activity_app_bar_height"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlayDark">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
@@ -34,7 +34,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlayDark"
+                 />
+            <!---->
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
