--- a/app/src/main/res/layout/content_stand.xml
+++ b/app/src/main/res/layout/content_stand.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/stand_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/subtext_padding_top"
+                android:paddingTop="@dimen/text_margin"
                 android:paddingBottom="@dimen/subtext_padding_bottom"
                 />
         </LinearLayout>
