--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,15 +13,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="AppTheme.AppBarOverlayDark" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="AppTheme.PopupOverlayDark" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <!--<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
-
-    <!-- custom items -->
-    <!--<style name="BrokenBikeButton" parent="Widget.AppCompat.Button.Colored">-->
-    <!--<item name="colorButtonNormal">#f0ad4e</item>-->
-    <!--<item name="android:textColorPrimary">#fff</item>-->
-    <!--</style>-->
-
 </resources>
