Login + dependency injection implemented (general refactoring)

--- a/app/src/main/res/menu/menu_nav_drawer.xml
+++ b/app/src/main/res/menu/menu_nav_drawer.xml
@@ -10,10 +10,15 @@
         android:title="@string/profile" />
 
     <item
-        android:id="@+id/history"
-        android:checked="false"
-        android:icon="@drawable/ic_history_black_24dp"
-        android:title="@string/ride_history" />
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_power_settings_new_black_36dp"
+        android:title="@string/logout"/>
+
+    <!--<item-->
+        <!--android:id="@+id/history"-->
+        <!--android:checked="false"-->
+        <!--android:icon="@drawable/ic_history_black_24dp"-->
+        <!--android:title="@string/ride_history" />-->
 
     <!--<item-->
         <!--android:id="@+id/sent_mail"-->
