--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -36,14 +36,120 @@
             android:layout_height="match_parent"
             />
 
+        <!-- include bottom sheet -->
+        <!--<include layout="@layout/bottom_sheet" />-->
+        app:behavior_peekHeight="?attr/actionBarSize"
+        <LinearLayout android:id="@+id/bottom_sheet"
+                      android:layout_width="match_parent"
+                      android:layout_height="180dp"
+                      app:behavior_peekHeight="?attr/actionBarSize"
+                      android:background="@color/colorAccent"
+                      android:orientation="vertical"
+                      app:behavior_hideable="false"
+                      app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize">
+
+                <TextView
+                    android:id="@+id/rented_bike_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rented: Bike XY"
+                    android:textStyle="normal|bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"
+
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginLeft="16dp"
+                    app:layout_constraintLeft_toLeftOf="parent"/>
+
+                <Button
+                    android:id="@+id/button_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:text="@string/info"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toLeftOf="@+id/button_return"
+                    />
+
+                <Button
+                    android:id="@+id/button_return"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:text="@string/return_word"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    />
+            </android.support.constraint.ConstraintLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp">
+
+                <TextView
+                    android:id="@+id/old_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="16sp"
+                    android:text="Old code: 1235"/>
+
+                <TextView
+                    android:id="@+id/new_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="16sp"
+                    android:text="New code: 2324"/>
+
+                <TextView
+                    android:id="@+id/rent_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="16sp"
+                    android:text="Rent start: 12:48 19.2.2017"/>
+
+                <TextView
+                    android:id="@+id/rent_from"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:text="Rented from: SKACELOVA"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/find_my_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
             app:srcCompat="@drawable/ic_my_location_black_24dp"
-            app:backgroundTint="@color/white"/>
+            app:backgroundTint="@color/white"
+            android:scaleType="center"
+            android:layout_gravity="top"
+            app:useCompatPadding="true"
+            app:layout_anchor="@+id/bottom_sheet"
+            app:layout_anchorGravity="top|right"
+            />
+
+
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
