--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -54,7 +54,7 @@
                     android:id="@+id/rented_bike_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rented: Bike XY"
+                    android:text="Bike XY (01:10)"
                     android:textStyle="normal|bold"
                     android:textSize="16sp"
                     android:textColor="@color/white"
@@ -145,7 +145,6 @@
             app:layout_anchor="@+id/bottom_sheet"
             app:layout_anchorGravity="top|right"
             />
-
 
     </android.support.design.widget.CoordinatorLayout>
 
