--- a/app/src/main/res/menu/menu_nav_drawer.xml
+++ b/app/src/main/res/menu/menu_nav_drawer.xml
@@ -5,20 +5,25 @@
 
     <item
         android:id="@+id/profile"
-        android:checked="false"
         android:icon="@drawable/ic_person_black_24dp"
         android:title="@string/profile" />
+
+    <item
+        android:id="@+id/history"
+        android:icon="@drawable/ic_history_black_24dp"
+        android:title="@string/ride_history" />
+
+    <item
+        android:id="@+id/help"
+        android:icon="@drawable/ic_help_black_24dp"
+        android:title="@string/help" />
 
     <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_power_settings_new_black_36dp"
         android:title="@string/logout"/>
 
-    <!--<item-->
-        <!--android:id="@+id/history"-->
-        <!--android:checked="false"-->
-        <!--android:icon="@drawable/ic_history_black_24dp"-->
-        <!--android:title="@string/ride_history" />-->
+
 
     <!--<item-->
         <!--android:id="@+id/sent_mail"-->
