--- a/app/src/main/res/menu/menu_maps.xml
+++ b/app/src/main/res/menu/menu_maps.xml
@@ -3,9 +3,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--<item-->
+        <!--android:id="@+id/action_search"-->
+        <!--android:title="@string/search"-->
+        <!--android:icon="@drawable/ic_search_black_24dp"-->
+        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
+        <!--app:showAsAction="always" />-->
+
     <item
-        android:id="@+id/action_search_stands"
-        android:title="@string/search"
+        android:id="@+id/action_search"
         android:icon="@drawable/ic_search_black_24dp"
+        android:orderInCategory="100"
+        android:title="@string/search_stand"
         app:showAsAction="always" />
+
+    <!--<item-->
+        <!--android:id="@+id/action_search"-->
+        <!--android:icon="@android:drawable/ic_menu_search"-->
+        <!--app:showAsAction="always"-->
+        <!--android:title="Search"/>-->
 </menu>
